--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,13 @@
     <artifactId>httpclient</artifactId>
 </dependency>
 
+<!-- add dependency for spring data rest -->
+
+<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-rest</artifactId>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.security</groupId>
