--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,12 @@
     <artifactId>httpclient</artifactId>
 </dependency>
 
+<dependency>
+<groupId>log4j</groupId>
+<artifactId>log4j</artifactId>
+<version>1.2.17</version>
+</dependency>
+
 <!-- add dependency for spring data rest -->
 
 <dependency>
