--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,17 @@ spring.datasource.password=springstudent
 
 spring.servlet.multipart.max-file-size=2500KB
 spring.servlet.multipart.max-request-size=2500KB
+
+
+logging.level.s7.Application=WARN
+logging.level.org.springframework.web=ERROR
+logging.level.com.luv2code.springboot.cruddemo=DEBUG
+
+logging.pattern.console="%d{yyy-MM-dd HH:mm:ss} -%msg%n"
+
+logging.pattern.file="%d{yyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+
+logging.file=C:/Users/antoine.khoury/Desktop/tony2/api2.log
 #spring.http.multipart.enabled=false
 #spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 #spring.jpa.open-in-view=false
