--- a/pom.xml
+++ b/pom.xml
@@ -45,10 +45,16 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.8.0</version>
 		</dependency>
+
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-boot-starter</artifactId>
 			<version>3.0.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
 		</dependency>
 
 				<dependency>
@@ -70,7 +76,12 @@
     <version>20200518</version>
 </dependency>
 
-
+	
+<dependency>
+ <groupId>org.login</groupId>
+  <artifactId>login</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
+</dependency>
 
 <dependency>
    <groupId>org.springframework.boot</groupId>
