--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 #jdbc properties
 #spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/account-posts-comments?useSSL=false&serverTimezone=UTC
@@ -18,6 +17,8 @@ logging.pattern.console="%d{yyy-MM-dd HH:mm:ss} -%msg%n"
 logging.pattern.file="%d{yyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
 
 logging.file=C:/Users/antoine.khoury/Desktop/tony2/api2.log
-#spring.http.multipart.enabled=false
+#spring.http.multipart.enabled=true
+#spring.servlet.multipart.enabled=true
+#spring.servlet.multipart.location=${java.io.tmpdir}
 #spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 #spring.jpa.open-in-view=false
