--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,10 @@
 <!--			<version>0.0.1-SNAPSHOT</version>-->
 <!--		</dependency> -->
 
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 
 
 		<dependency>
