--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,11 @@ logging.file=C:/Users/antoine.khoury/Desktop/tony2/api2.log
 #spring.servlet.multipart.location=${java.io.tmpdir}
 #spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 #spring.jpa.open-in-view=false
+
+spring.mail.protocol=smtp
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=tonykhoury993@gmail.com
+spring.mail.password=mogmgngyclrkhtvj
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
